--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             display: flex;
             width: 100%;
             height: 100%;
-            background-color: #5792F2;
+            background-color: #7a90b2;
             margin: 0;
             flex-flow: column;
             justify-content: center;
